# robotic_hw

./: README.md
install/: local_setup.sh  setup.sh
install/cpp_sensor_server/lib/cpp_sensor_server/: sensor_client  sensor_server  sensor_server2
install/cpp_sensor_server/share/cpp_sensor_server/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cpp_sensor_server/share/cpp_sensor_server/cmake/: ament_cmake_export_dependencies-extras.cmake  cpp_sensor_serverConfig.cmake  cpp_sensor_server__rosidl_typesupport_cExport.cmake  cpp_sensor_server__rosidl_typesupport_cppExport-noconfig.cmake  cpp_sensor_server__rosidl_typesupport_cppExport.cmake  cpp_sensor_server__rosidl_typesupport_introspection_cExport.cmake  cpp_sensor_server__rosidl_typesupport_introspection_cppExport-noconfig.cmake  cpp_sensor_server__rosidl_typesupport_introspection_cppExport.cmake  export_cpp_sensor_server__rosidl_generator_cExport-noconfig.cmake  export_cpp_sensor_server__rosidl_generator_cExport.cmake  rosidl_cmake-extras.cmake  (+8 more)
install/cpp_srvcli/lib/cpp_srvcli/: client  server
install/cpp_srvcli/share/cpp_srvcli/: package.sh  package.xml
install/py_srvcli/lib/py_srvcli/: service2
install/py_srvcli/share/py_srvcli/: package.sh  package.xml
install/sensor_interfaces/share/sensor_interfaces/: package.dsv  package.ps1  package.sh
install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.sh  package.sh  package.xml
log/: latest_build
src/py_srvcli/: setup.py
src/sensor_interfaces/: CMakeLists.txt
(+114 files in other folders)
